app/assets/stylesheets/common.css.scss
@import "normalize";
@import "bourbon";
@import "font-awesome";
@import "variables";
@import "highlight_js/tomorrow-night-eighties";

// base

body {
  color: #333;
  background-color: #f9f9f9;
  font-size: 14px;
}

h1, h2, h3, h4 {
  margin: 1.6em 0 1em;
  font-weight: normal;
}

h1 {
  font-size: 2em;
}

h2 {
  font-size: 1.6em;
}

h3 {
  font-size: 1.4em;
}

h4 {
  font-size: 1.2em;
}

p {
  font-size: 1em;
  margin: 1em 0;
}

a {
  color: $linkColor;
  text-decoration: none;

  &:hover {
    color: darken($linkColor, 10%);
    @include transition(color 0.15s ease);
  }
}

article {
  font-size: 1em;
  line-height: 160%;

  * {
    line-height: 160%;
  }

  a {
    &:hover {
      text-decoration: underline;
    }
  }

  blockquote {
    margin: 1em 0;
    padding: 0 0 0 1em;
    border-left: 5px solid #ccc;
    color: #555;
  }

  p code {
    margin: 0 5px;
    padding: 0 5px;
    background-color: #eee;
  }

  img {
    max-width: 100%;
  }

  :first-child {
    margin-top: 0;
  }

  :last-child {
    margin-bottom: 0;
  }
}

hr {
  margin: 40px 0;
  border: 0;
  height: 1px;
  background-color: #ccc;
}

nav ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.icon-spin {
  @include animation(spin 1s infinite linear);
}

.clearfix {
  @include clearfix();
}

.pull-left {
  float: left;
}

.pull-right {
  float: right;
}

.hide {
  display: none !important;
}

@media (max-width: 640px) {
  .hide-on-mobile {
    display: none !important;
  }

  .show-on-mobile {
    display: inherit !important;
  }
}

@media (max-width: 768px) {
  .hide-on-tablet {
    display: none !important;
  }

  .show-on-tablet {
    display: inherit !important;
  }
}

// form

#{$all-text-inputs},
textarea {
  border: 1px solid #ccc;
  padding: 7px;
  margin-right: 10px;
  outline: 0;
  border-radius: 3px;
  width: 300px;
  max-width: 100%;
  @include box-sizing(border-box);

  &:focus {
    @include box-shadow(0 0 1px rgba(0, 0, 0, 0.3));
    @include transition(box-shadow 0.15s ease);
  }
}

textarea {
  height: 150px;
}

select {
  border: 1px solid #ccc;
  background-color: #fff;
  padding: 5px 7px;
  outline: 0;
  border-radius: 3px;
}

.field {
  margin-bottom: 20px;

  &:last-child {
    margin-bottom: 0;
  }

  label {
    display: block;
    margin-bottom: 5px;
  }

  label.message {
    margin: 5px 0 0;
  }

  .field_with_errors {
    label.message {
      color: $red;

      &::before {
        font-family: FontAwesome;
        display: inline-block;
        content: "\f05e"; // ban-icon
        margin-right: 2px;
      }
    }
  }
}

fieldset {
  border: 0;
  border-bottom: 1px solid #ccc;
  padding: 0 0 34px;
  margin: 0 0 34px;
  @include clearfix();

  &:last-child {
    border-bottom: 0;
  }

  legend {
    font-weight: bold;
    color: #555;
    margin-bottom: 20px;
  }
}


// button

@mixin button-color($color, $textColor) {
  color: $textColor;
  border: 1px solid darken($color, 15%);
  @include linear-gradient($color, darken($color, 3%));

  &:hover,
  &:focus {
    color: $textColor;
    text-decoration: none;
    @include linear-gradient(darken($color, 3%), darken($color, 6%));
    @include box-shadow(0 0 1px rgba(0, 0, 0, 0.3));
  }

  &.button-actived,
  &:active {
    @include linear-gradient(darken($color, 6%), darken($color, 9%));
  }

  &.button-disabled {
    color: #999;
    background-color: darken($color, 5%);
    background-image: none;

    &:hover,
    &:focus,
    &:active {
      cursor: default;
      background-color: darken($color, 5%);
      background-image: none;
      @include box-shadow(none);
    }
  }
}

input[type=submit],
button,
.button {
  padding: 7px 14px;
  margin-right: 10px;
  font-weight: normal;
  display: inline-block;
  border-radius: 3px;
  @include button-color(#fefefe, #333);

  &.no-margin {
    margin: 0;
  }

  &.button-primary {
    @include button-color($linkColor, #fff);
  }

  &.button-green {
    @include button-color($green, #fff);
  }

  &.button-danger {
    @include button-color($red, #fff);
  }

  &.button-large {
    font-size: 1.2em;
    padding: 7px 28px;
  }
}

a.button:hover {
  text-decoration: none;
}

.button-group {
  display: inline-block;
  margin-right: 10px;

  input[type=submit],
  button,
  .button {
    margin-right: 0;
    border-right-width: 0;
    border-radius: 0;

    &:first-child {
      border-radius: 3px 0 0 3px;
    }

    &:last-child {
      border-right-width: 1px;
      border-radius: 0 3px 3px 0;
    }
  }
}

// dropdown

.dropdown {
  position: relative;
  display: inline-block;

  a {
    color: #333;

    &:hover {
      text-decoration: none;
    }
  }

  .dropdown-toggle {
    position: relative;
    padding: 7px 27px 7px 10px;
    display: inline-block;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;

    &:after {
      position: absolute;
      right: 0;
      padding: 2px 10px;
      font-family: FontAwesome;
      display: inline-block;
      content: "\f0d7";
    }
  }

  .dropdown-menu {
    display: none;
    margin: 0;
    padding: 0;
    z-index: 1000;
    width: 150px;
    position: absolute;
    top: 32px;
    left: 0;
    background: #fff;
    border: 1px solid #ccc;
    @include box-shadow(0 1px 8px rgba(0, 0, 0, 0.3));

    &.align-right {
      left: auto;
      right: 0;
    }

    li {
      display: block;
      cursor: pointer;
      float: none;

      hr {
        margin: 3px 0;
      }

      a {
        display: block;
        padding: 6px 10px;
        @include transition(none);

        &:hover {
          background-color: $linkColor;
          color: #fff;
        }
      }

      &:last-child {
        border-bottom: none;
      }
    }
  }

  &.actived {
    .dropdown-toggle.button {
      @include linear-gradient(darken(#fff, 6%), darken(#fff, 9%));
    }

    .dropdown-toggle:after {
      content: "\f0d8";
    }

    .dropdown-menu {
      display: block;
    }
  }
}

// modal

#modal-background {
  width: 100%;
  height: 100%;
  background-color: white;
  opacity: 0.5;
  position: fixed;
  top: 0;
  left: 0;

  &.level-2 {
    z-index: 2000;
  }
}

.modal-dialog {
  position: fixed;
  display: none;
  top: 30%;
  left: 50%;
  background: white;
  border: 1px solid #ccc;
  padding: 30px;
  @include box-shadow(0 4px 16px rgba(0, 0, 0, 0.5));

  width: 340px;
  margin-left: -186px;

  span.modal-close {
    position: absolute;
    top: 0;
    right: 0;
    padding: 10px;
    cursor: pointer;
    color: #999;

    &:hover {
      color: #444;
    }
  }

  .field {
    #{$all-text-inputs} {
      width: 100%;
    }

    textarea {
      width: 100%;
      height: 120px;
    }
  }
}

// alert message

.alert-message {
  position: fixed;
  top: 102px;
  right: 50%;
  margin-right: -460px;
  padding: 5px 10px;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 3px;
  color: #fff;
  z-index: 2000;
  cursor: pointer;
  opacity: 1;
  visibility: visible;
  @include box-shadow(0 1px 5px rgba(0, 0, 0, 0.3));
  @include transition(top 0.15s ease, opacity 0.15s ease);

  &.alert-hide {
    opacity: 0;
    visibility: hidden;
    @include transition(top 0.15s ease, visibility 0s ease 0.15s, opacity 0.15s ease);
  }

  i {
    margin-right: 5px;
  }

  &.loading {
  }

  &.error {
    background-color: $red;
  }

  &.success {
    background-color: $green;
  }
}

// spinner

#spinner {
  position: fixed;
  top: 11px;
  left: 50%;
  z-index: 2000;
  margin-left: -12px;
  display: none;
  font-size: 24px;
  color: #999;
}

